--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/bun": "^1.1.13",
     "@types/fs-extra": "^11.0.4",
+    "@types/validator": "^13.12.2",
     "commander": "^12.1.0",
     "concurrently": "^9.1.0",
     "inquirer": "^12.1.0",
@@ -33,6 +34,7 @@
     "svelte-check": "^4.0.7",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3",
+    "validator": "^13.12.0",
     "vite": "^5.4.11"
   },
   "prettier": "@repo/config/prettier.config.js",
