[web] add dep: p5

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,9 @@
 	"prettier": "@repo/config/prettier.config.js",
 	"devDependencies": {
 		"@repo/lib": "*",
-		"eruda": "^3.4.0"
+		"@types/p5": "^1.7.6",
+		"eruda": "^3.4.0",
+		"p5": "^1.11.1"
 	},
 	"type": "module"
 }
