[web] add dep: sharp

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,8 @@
 		"@types/p5": "^1.7.6",
 		"dexie": "^4.0.9",
 		"eruda": "^3.4.0",
-		"p5": "^1.11.1"
+		"p5": "^1.11.1",
+		"sharp": "^0.33.5"
 	},
 	"type": "module"
 }
