[data_fetcher] news fetcher

--- a/apps/data_fetcher/package.json
+++ b/apps/data_fetcher/package.json
@@ -3,7 +3,9 @@
 	"module": "index.ts",
 	"type": "module",
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"@types/selenium-webdriver": "^4.1.27",
+		"selenium-webdriver": "^4.26.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
