--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -3,6 +3,7 @@
 	"module": "index.ts",
 	"type": "module",
 	"devDependencies": {
+		"@cloudflare/speedtest": "^1.3.0",
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
