--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
 		"eruda": "^3.4.1",
 		"p5": "^1.11.1",
 		"sharp": "^0.33.5",
+		"systeminformation": "^5.23.5",
 		"three": "^0.170.0"
 	},
 	"type": "module"
