--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "bunx --bun vite dev",
 		"build": "bunx --bun vite build",
-		"start": "bun run ./build",
+		"start": "bun run ./server.js",
 		"preview": "vite preview",
 		"redeploy": "cd ./apps/web; bun run build; cd ../../; pm2 reload ecosystem.config.cjs;",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
