--- a/apps/data_fetcher/package.json
+++ b/apps/data_fetcher/package.json
@@ -2,6 +2,9 @@
 	"name": "data_fetcher",
 	"module": "index.ts",
 	"type": "module",
+	"scripts": {
+		"start": "bun run ./index.ts"
+	},
 	"devDependencies": {
 		"@types/bun": "latest",
 		"@types/selenium-webdriver": "^4.1.27",
