--- a/backend/web/Cargo.toml
+++ b/backend/web/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 sqlx = { version = "0.8.3", features = ["uuid", "postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
 sysinfo = "0.33.1"
+thirtyfour = "0.35.0"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
 tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
