--- a/backend/model/Cargo.toml
+++ b/backend/model/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-std = "1.13.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 typeshare = "1.0.4"
@@ -12,4 +11,4 @@ uuid = { version = "1.12.1", features = ["serde"] }
 chrono = { version = "0.4.39", features = ["serde"] }
 thirtyfour = "0.35.0"
 sqlx = "0.8.3"
-rand = "0.9.0"
+utils = { path = "../utils" }
