--- a/backend/web/Cargo.toml
+++ b/backend/web/Cargo.toml
@@ -8,7 +8,6 @@ axum = { version = "0.8.1", features = ["multipart", "ws"] }
 chrono = "0.4.39"
 dotenvy = "0.15.7"
 futures = "0.3.31"
-image = "0.25.5"
 reqwest = "0.12.12"
 scraper = "0.22.0"
 serde = { version = "1.0.217", features = ["derive"] }
@@ -22,5 +21,6 @@ tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = { version = "1.12.1" }
+utils = { path = "../utils" }
 
 model = { path = "../model" }
