--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
 		"@types/validator": "^13.12.2",
 		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.9",
+		"daisyui": "^4.12.23",
 		"dexie": "^4.0.11",
 		"eruda": "^3.4.1",
 		"moment": "^2.30.1",
