--- a/backend/utils/Cargo.toml
+++ b/backend/utils/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 async-std = "1.13.0"
 image = "0.25.5"
 rand = "0.9.0"
+sqlx = { version = "0.8.3", features = ["postgres"] }
+tokio = "1.43.0"
+futures = "0.3.31"
 bytes = "1.10.0"
