--- a/backend/model/Cargo.toml
+++ b/backend/model/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.217", features = ["derive"] }
+http = "1.2.0"
+tracing = "0.1.41"
 serde_json = "1.0.138"
 typeshare = "1.0.4"
 uuid = { version = "1.12.1", features = ["serde"] }
@@ -12,3 +14,4 @@ chrono = { version = "0.4.39", features = ["serde"] }
 thirtyfour = "0.35.0"
 sqlx = "0.8.3"
 utils = { path = "../utils" }
+regex = "1.11.1"
