--- a/backend/model/Cargo.toml
+++ b/backend/model/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.8.1"
+axum_typed_multipart = "0.15.1"
 serde = { version = "1.0.217", features = ["derive"] }
 http = "1.2.0"
 serde_json = "1.0.138"
