--- a/backend/web/Cargo.toml
+++ b/backend/web/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.8.1", features = ["multipart", "ws"] }
+axum_typed_multipart = "0.15.1"
 dotenvy = "0.15.7"
 futures = "0.3.31"
 reqwest = "0.12.12"
@@ -17,7 +18,5 @@ tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-uuid = { version = "1.12.1" }
 utils = { path = "../utils" }
-
 model = { path = "../model" }
