--- a/backend/web/Cargo.toml
+++ b/backend/web/Cargo.toml
@@ -18,6 +18,6 @@ tokio = { version = "1.43.0", features = ["full"] }
 tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
 tower-http = { version = "0.6.2", features = ["fs", "trace"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 utils = { path = "../utils" }
 model = { path = "../model" }
