--- a/backend/utils/Cargo.toml
+++ b/backend/utils/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-std = "1.13.0"
+dotenvy = "0.15.7"
 image = "0.25.5"
 rand = "0.9.0"
 sqlx = { version = "0.8.3", features = ["postgres"] }
