--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ BACKEND_HOST=0.0.0.0
 BACKEND_ROOT=/app/backend
 
 # Frontend
-PUBLIC_FA_KIT_URL=https://kit.fontawesome.com/a5687f4d72.js
+PUBLIC_FA_KIT_URL=https://kit.fontawesome.com/<fa_kit_id>.js
