use single Dockerfile in the root folder

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ CHROMEDRIVER_PORT=4444
 # Backend
 BACKEND_PORT=3000
 BACKEND_HOST=0.0.0.0
-BACKEND_ROOT=/app/backend
+APP_ROOT=/app
 
 # Frontend
 PUBLIC_FA_KIT_URL=https://kit.fontawesome.com/<fa_kit_id>.js
