--- a/backend/model/Cargo.toml
+++ b/backend/model/Cargo.toml
@@ -9,6 +9,7 @@ axum_typed_multipart = "0.15.1"
 serde = { version = "1.0.217", features = ["derive"] }
 http = "1.2.0"
 serde_json = "1.0.138"
+tracing = "0.1.41"
 typeshare = "1.0.4"
 uuid = { version = "1.13.1", features = ["serde"] }
 chrono = { version = "0.4.39", features = ["serde"] }
