--- a/compose.yaml
+++ b/compose.yaml
@@ -20,7 +20,7 @@ services:
   db:
     image: postgres:17
     container_name: db
-    restart: always
+    restart: unless-stopped
     env_file:
       - .env
     ports:
@@ -33,10 +33,9 @@ services:
     image: spryker/chromedriver
     init: true
     container_name: chromedriver
-    expose:
-      - "${CHROMEDRIVER_PORT}"
-    restart: unless-stopped
+    ports:
+      - "${CHROMEDRIVER_PORT}:4444"
+    restart: always
 
 volumes:
   db_data:
-
