--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,6 +11,8 @@ openssl = { version = "0.10.71", features = ["vendored"] } # This is more docker
 project-root = "0.2.2"
 reqwest = { version = "0.12.12" }
 scraper = "0.22.0"
+serde = "1.0.217"
+serde_json = "1.0.138"
 sqlx = { version = "0.8.3", features = ["uuid", "postgres", "runtime-tokio", "tls-native-tls", "chrono"] }
 sysinfo = "0.33.1"
 thirtyfour = { version = "0.35.0" }
