[frontend] load env vars from project root

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ CHROMEDRIVER_PORT=4444
 BACKEND_PORT=3000
 BACKEND_HOST=0.0.0.0
 APP_ROOT=/app
+
+# Frontend
+PUBLIC_FA_KIT_URL=https://kit.fontawesome.com/<fa_kit_id>.js
