.env.example add comment

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=<project_name>
 POSTGRES_PORT=5432
+
+# DBMate
 DATABASE_URL=postgresql://<username>:<password>@localhost:<port>/<db_name>?sslmode=disable
 
 # Webdriver
