--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./backend/db/storage:${APP_ROOT}/backend/db/storage
       - ./backend/db/backups:${APP_ROOT}/backend/db/backups
+      - ./backend/cert:${APP_ROOT}/backend/cert
     env_file:
       - .env
     ports:
